// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Book should match its empty snapshot 1`] = `
<div
  className="book"
>
  <div
    className="book-top"
  >
    <BookCover />
    <BookShelfChanger />
  </div>
  <div
    className="book-title"
  />
  <div
    className="book-authors"
  />
</div>
`;

exports[`Component: Book should render the props 1`] = `
<div
  className="book"
>
  <div
    className="book-top"
  >
    <BookCover
      url="test-url"
    />
    <BookShelfChanger />
  </div>
  <div
    className="book-title"
  >
    Test Name
  </div>
  <div
    className="book-authors"
  >
    test author 1, test author 2
  </div>
</div>
`;
